# ocs2_airbot

./: README.md
ocs2_airbot/: CMakeLists.txt  package.xml
ocs2_airbot/auto_generated/airbot/end_effector_kinematics_orientation/cppad_generated/: end_effector_kinematics_orientation_forward_zero.c  end_effector_kinematics_orientation_info.c  end_effector_kinematics_orientation_jacobian_sparsity.c  end_effector_kinematics_orientation_sparse_jacobian.c
ocs2_airbot/auto_generated/airbot/end_effector_kinematics_position/cppad_generated/: end_effector_kinematics_position_forward_zero.c  end_effector_kinematics_position_info.c  end_effector_kinematics_position_jacobian_sparsity.c  end_effector_kinematics_position_sparse_jacobian.c
ocs2_airbot/auto_generated/airbot/end_effector_kinematics_velocity/cppad_generated/: end_effector_kinematics_velocity_forward_zero.c  end_effector_kinematics_velocity_info.c  end_effector_kinematics_velocity_jacobian_sparsity.c  end_effector_kinematics_velocity_sparse_jacobian.c
ocs2_airbot/config/: task.info
ocs2_airbot/launch/: ocs2_airbot.launch
ocs2_airbot/src/: AirbotMpcMrtNode.cpp  MobileManipulatorDummyVisualization.cpp
robot_description/: CMakeLists.txt  package.xml
robot_description/airbot/: default.rviz
robot_description/airbot/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
robot_description/airbot/urdf/: airbot_play.urdf  airbot_play_v2_1.urdf  airbot_play_v2_1_with_gripper.urdf  airbot_play_with_gripper.urdf
robot_description/airbot/xacro/: airbot.xacro  arm.xacro  gripper.xacro
robot_description/launch/: display.launch  gazebo.launch
